deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-server
  namespace: nexus
  labels:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 8020
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/component: server
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-web
  namespace: nexus
  labels:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nexus
    app.kubernetes.io/component: web
